@@ -85,5 +85,6 @@ Please get in touch to update your entry or let us know if you have contributed 
 - https://github.com/beji[Björn Erlwein]
 - https://github.com/camminati[Tulio Camminati]
 - https://github.com/RoettingerJ[Joachim Röttinger]
+- https://github.com/PacoVK[Pascal Euhus]
 
 image::https://img.shields.io/github/contributors/doctoolchain/doctoolchain.svg[link=https://github.com/docToolchain/docToolchain/graphs/contributors]
